--- a/css/task-4.css
+++ b/css/task-4.css
@@ -43,7 +43,7 @@ body {
   font-size: 20px;
   color: #fff;
 }
-.container {
+.main {
   height: calc(100vh - 71px);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
@@ -90,7 +90,7 @@ body {
   margin-right: 15px;
   margin-bottom: 80px;
 }
-#main {
+#container {
   padding: 15px 0 15px 15px;
   overflow: hidden;
 }
