--- a/css/task-4.css
+++ b/css/task-4.css
@@ -31,18 +31,6 @@ body {
   display: inline;
   color: #fff;
 }
-#tile-container h2 {
-  text-decoration: underline;
-  margin-top: 0;
-}
-#tile-container p {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  line-height: 30px;
-  font-size: 20px;
-  color: #fff;
-}
 .main {
   height: calc(100vh - 71px);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -65,6 +53,14 @@ body {
   color: #4ba484;
   text-decoration: none;
 }
+#container > h2 {
+  text-decoration: underline;
+  margin-top: 0;
+}
+#container {
+  padding: 15px 0 15px 15px;
+  overflow: hidden;
+}
 .green-bg {
   background-color: #09cd82;
 }
@@ -83,20 +79,24 @@ body {
 .orange-bg {
   background-color: #ff6e61;
 }
+#tile-container p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 30px;
+  font-size: 20px;
+  color: #fff;
+}
 .tile {
-  width: 311px;
+  width: calc(((100%) / 4) - 15px);
   height: 150px;
   float: left;
   margin-right: 15px;
   margin-bottom: 80px;
 }
-#container {
-  padding: 15px 0 15px 15px;
-  overflow: hidden;
-}
 .circle,
 .chart {
-  width: 311px;
+  width: calc(((100%) / 4) - 15px);
   height: 307.3px;
   float: left;
   margin-right: 15px;
@@ -109,25 +109,25 @@ body {
   justify-content: center;
 }
 .on {
-  width: 200px;
-  height: 200px;
+  width: 70%;
+  height: 70%;
+}
+.tw {
+  width: 90%;
+  height: 90%;
+  background-color: white;
 }
 .thre {
-  width: 100px;
-  height: 100px;
+  width: 40%;
+  height: 40%;
 }
 .on,
 .thre h2 {
   color: white;
 }
-.tw {
-  width: 280px;
-  height: 280px;
-  background-color: white;
-}
 .fou {
-  width: 280px;
-  height: 280px;
+  width: 90%;
+  height: 90%;
   background-color: #ff7163;
 }
 .bar {
