--- a/css/task-2.css
+++ b/css/task-2.css
@@ -4,67 +4,10 @@ body {
 }
 #navbar {
   background-color: #472955;
-  height: 60px;
+  height: 70px;
   margin-bottom: 15px;
   display: flex;
   justify-content: space-between;
-}
-.boxes {
-  background-color: #85df7f;
-  height: 160px;
-  width: 30%;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  padding: 15px;
-}
-.first {
-  float: left;
-}
-.second {
-  float: right;
-}
-.boxes h1 {
-  margin-top: 0px;
-}
-.box {
-  background-color: #cad0e2;
-  height: 220px;
-  width: 97%;
-  margin-bottom: 15px;
-  margin-left: 15px;
-  margin-right: 15px;
-}
-.empty {
-  background-color: #a42e3a;
-  height: 328px;
-  width: 97%;
-  margin-top: 15px;
-  margin-right: 15px;
-  margin-bottom: 15px;
-  margin-left: 15px;
-}
-.empty1 {
-  background-color: darkkhaki;
-  height: 280px;
-  width: 96.7%;
-  border: 4px solid #31a524;
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-}
-.padd {
-  padding: 10px;
-  background-color: #d3d3d3;
-}
-.m-r {
-  margin-right: 30px;
-}
-.m-l {
-  margin-left: 30px;
-}
-div {
-  padding: 10px;
 }
 .left {
   float: left;
@@ -80,7 +23,7 @@ div {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 10px;
+  margin: 10px;
 }
 .left h2 {
   display: inline;
@@ -94,3 +37,46 @@ div {
   padding: 0 20px;
   text-decoration: none;
 }
+#main-container {
+  background-color: #d2d9e9;
+  height: 260px;
+  margin: 15px;
+  padding: 25px;
+  display: flex;
+  justify-content: space-between;
+}
+.box {
+  background-color: #82e17d;
+  width: 300px;
+  padding: 15px;
+}
+.empty {
+  background-color: #b84240;
+  height: 240px;
+  margin: 0 15px 15px 15px;
+  padding: 15px;
+}
+.empty1 {
+  background-color: #dadada;
+  border: 4px solid #369b25;
+  height: 98%;
+}
+@media only screen and (max-width: 750px) {
+  .right a {
+    display: none;
+  }
+  #navbar {
+    width: 100%;
+  }
+  #main-container {
+    width: calc((100%) - 80px);
+    flex-direction: column;
+    height: auto;
+  }
+  .box {
+    width: calc((100%) - 60px);
+    margin-bottom: 10px;
+    margin-left: 15px;
+  }
+}
+
