--- a/css/index.css
+++ b/css/index.css
@@ -29,3 +29,12 @@ body {
   background-color: blue;
   color: red;
 }
+@media only screen and (max-width: 850px) {
+  .main a {
+    display: block;
+    height: auto;
+    line-height: 20pt;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+}
