--- a/css/task-2.css
+++ b/css/task-2.css
@@ -50,6 +50,9 @@ body {
   width: 300px;
   padding: 15px;
 }
+.box h1 {
+  margin-top: 0;
+}
 .empty {
   background-color: #b84240;
   height: 240px;
