--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0 auto;
-  background-color: teal;
+  background-color: #579BB1;
 }
 .main {
   height: 300px;
@@ -11,17 +11,17 @@ body {
   align-items: center;
   justify-content: center;
   margin-top: 200px;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 .main a {
   color: black;
   padding: 30px;
   text-decoration: none;
-  border: 3px solid teal;
-  border-radius: 5px;
+  border: 3px solid #579BB1;
+  border-radius: 10px;
 }
 .main a:hover {
-  background-color: teal;
+  background-color: #579BB1;
   color: beige;
   text-decoration: underline;
 }
