--- a/css/index.css
+++ b/css/index.css
@@ -3,14 +3,14 @@ body {
   background-color: #579BB1;
 }
 .main {
-  height: 300px;
+  height: calc(100vh - 400px);
   background-color: lavender;
   margin: auto;
   width: 40%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 200px;
+  margin-top: 14%;
   border-radius: 10px;
 }
 .main a {
@@ -30,14 +30,9 @@ body {
   color: red;
 }
 @media only screen and (max-width: 850px) {
-  .main{
-    margin-top: 150px;
-  }
   .main a {
     display: block;
-    height: auto;
-    line-height: 20pt;
-    padding: 10px;
+    padding: 15px;
     margin-bottom: 10px;
   }
 }
