--- a/css/task-2.css
+++ b/css/task-2.css
@@ -64,12 +64,9 @@ body {
   border: 4px solid #369b25;
   height: 98%;
 }
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 767px) {
   .right a {
     display: none;
-  }
-  #navbar {
-    width: 100%;
   }
   #main-container {
     width: calc((100%) - 80px);
@@ -77,9 +74,11 @@ body {
     height: auto;
   }
   .box {
-    width: calc((100%) - 60px);
+    width: calc((100%) - 30px);
     margin-bottom: 10px;
-    margin-left: 15px;
+  }
+  .box:last-child{
+    margin-bottom: 0;
   }
 }
 
