--- a/css/task-7.css
+++ b/css/task-7.css
@@ -82,14 +82,22 @@ th, td {
 table {
     width: 100%;
 }
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 767px) {
     #sidebar {
         display: none;
+    }
+    th, td {
+        padding: 10px;
     }
     #table {
         overflow: auto;
     }
-    th, td {
-        padding: 15px;
-    }
 }
+@media only screen and (max-width: 991px) and (min-width: 768px) {
+    #sidebar {
+        width: 150px;
+    }
+    th, td {
+        padding: 10px;
+    }
+  }
