--- a/css/task-6.css
+++ b/css/task-6.css
@@ -1,163 +1,109 @@
 body {
-  margin: 0 auto;
+    margin: 0 auto;
 }
 #navbar {
-  height: 70px;
-  border-bottom: 2px solid gray;
-  font-family: Arial, Helvetica, sans-serif;
+    height: 70px;
+    border-bottom: 2px solid gray;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .left {
-  float: left;
-  display: flex;
+    float: left;
+    display: flex;
 }
 .right {
-  float: right;
-  display: flex;
-  align-self: center;
+    float: right;
+    display: flex;
+    align-self: center;
 }
 .right img {
-  height: 50px;
-  margin-top: 7px;
-  margin-right: 20px;
+    height: 50px;
+    margin-top: 7px;
+    margin-right: 20px;
 }
 .left img {
-  height: 50px;
-  margin-top: 7px;
-  margin-left: 40px;
-  margin-right: 5px;
+    height: 50px;
+    margin: 7px 5px 0px 25px;
 }
 .left h2 {
-  display: inline;
-  color: gray;
+    display: inline;
+    color: gray;
 }
 .main {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 #sidebar {
-  height: calc(100vh - 72px);
-  float: left;
-  width: 200px;
-  border-right: 2px solid gray;
+    height: calc(100vh - 72px);
+    float: left;
+    width: 200px;
+    border-right: 2px solid gray;
 }
 .side {
-  padding: 20px;
-  line-height: 25pt;
+    padding: 20px;
+    line-height: 25pt;
 }
 .side nav a {
-  padding: 20px;
-  text-decoration: none;
-  color: black;
-}
-#container > h3 {
-  text-decoration: underline;
-  font-weight: normal;
-  margin-top: 0;
-  margin-bottom: 30px;
+    padding: 5px;
+    text-decoration: none;
+    color: black;
 }
 #container {
-  padding: 25px 0 15px 50px;
-  overflow: hidden;
-  line-height: 22pt;
+    padding: 8px 40px 15px 50px;
+    overflow: hidden;
+    line-height: 22pt;
 }
-span {
-  color: red;
+.head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
-.firstname, .lastname, .mobile, .email, .branch, .hostel {
-  display: flex;
-  flex-direction: column;
+.head a {
+    text-decoration: none;
+    color: #fff;
+    padding: 3px 15px;
+    background-color: #3BB989;
+    
 }
-.firstname, .lastname, .mobile, .email, .branch {
-  width: 32%;
+span h3 {
+    text-decoration: underline;
+    font-weight: normal;
 }
-.firstname, .mobile, .branch {
-  float: left;
-  margin-right: 12%;
+table,
+th,
+td {
+  border: 1px solid lightgrey;
+  border-collapse: collapse;
 }
-.padd {
-  padding: 10px 15px;
-  border: 1px solid #555;
+th, td {
+    text-align: left;
+    padding: 20px;
 }
-.maright {
-  margin-right: 20px;
-  background-color: #FF7261;
-}
-.check {
-  margin-right: 15px;
-}
-.marg {
-  margin-bottom: 10px;
-}
-.button {
-  margin-left: 50%;
-}
-.pad {
-  padding-right: 4%;
-}
-.top {
-  margin-top: 8px;
-}
-.rad {
-  padding-right: 50px;
-}
-.addr {
-  padding: 10px;
-  border: 1px solid #555;
-}
-.set {
-  padding: 15px 50px;
-  color: #fff;
-  border: none;
-  border-radius: 30px;
-  cursor: pointer;
-}
-.color {
-  background-color: #3ABA8A;
-}
-@media only screen and (max-width: 767px) {
-  #container {
-    padding: 30px;
-    padding-bottom: 0;
-  }
-  #sidebar {
-    display: none;
-  }
-  .pad {
-    padding: 0;
-    display: block;;
-  }
-  .padd {
-    padding: 10px;
+table {
     width: 100%;
+}
+.flex {
+    display: flex;
+    align-items: center;
   }
-  .button {
-    margin: 20px;
+  nav img {
+    height: 20px;
+    margin-right: 15px;
   }
-  .maright {
-    margin-bottom: 10px;
-  }
-  .firstname, .lastname, .mobile, .email, .branch, .hostel, .addr {
-    display: block;
-    width: calc(100% - 22px);
-  }
+@media only screen and (max-width: 767px) {
+    #sidebar {
+        display: none;
+    }
+    th, td {
+        padding: 10px;
+    }
+    #table {
+        overflow: auto;
+    }
 }
 @media only screen and (max-width: 991px) and (min-width: 768px) {
-  #container {
-    margin-right: 40px;
+    #sidebar {
+        width: 150px;
+    }
+    th, td {
+        padding: 10px;
+    }
   }
-  #sidebar {
-    height: 100vh;
-  }
-  .firstname, .lastname, .mobile, .email, .branch {
-    width: 40%;
-  }
-  .pad {
-    padding: 0;
-    display: block;;
-  }
-  .button {
-    margin: 20px;
-  }
-  .maright {
-    margin-bottom: 10px;
-  }
-}
