--- a/css/index.css
+++ b/css/index.css
@@ -3,14 +3,14 @@ body {
   background-color: #579BB1;
 }
 .main {
-  height: calc(100vh - 400px);
+  height: 300px;
   background-color: lavender;
   margin: auto;
   width: 40%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 14%;
+  margin-top: 12%;
   border-radius: 10px;
 }
 .main a {
